Fixed some layout problems

--- a/bibsonomy-webapp/src/main/webapp/resources/css/fsform.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/fsform.css
@@ -6,6 +6,10 @@
     width:100%;
 }
 
+.fsHelp {
+	margin-left: 10px;	
+}
+
 .fsLegend {
     text-align:left;
     width:auto;
